          executed on the latest Ubuntu and MacOS systems.
        * Added Ubuntu 22.04 to the platforms on which GitHub actions will run "distcheck.yml"
        * Modified Git hook "pre-commit" to ensure that the version ID in "configure.ac" is the
          same as the first word in "CHANGE_LOG" 
        * Removed target "consistent" and its dependencies from "dev-makefile"

6.13.17 2022-10-24T15:01:17-0600 (should have been 6.14.0 due to the addition of blender(1))
    Installation:
        * Restored setting of LDM_PORT in distribution's registry
        * Added support for use of chronyd(8) instead of ntpdate(8)

    ldmadmin(1):
        * Improved:
            * Waiting for the LDM to start
            * Determining if the LDM is running
        * "ldmadmin start" verifies that
            * The product-queue exists
            * ldmd(1) owned by root and setuid
        * Added support for use of chronyd(8) instead of ntpdate(8)
        * Added "-o <template>" option to "plotmetrics" command to write metrics plots to files
          instead of to the X-server.
        * Added 1 s timeout to ldmping(1) in isRunning() to speed up "ldmadmin start" and
          "ldmadmin stop"

    Top-level LDM server, ldmd(1):
        * Ensure printing of process ID in daemonize()
        * Always make final process a group leader
        * Improved daemonization of the LDM by fork(2)ing twice and redirecting all standard I/O
          streams to /dev/null
        * Now becomes owned by root before sending SIGTERM to process group to ensure that even
          setuid processes that are owned by root receive the signal. Relinquishes root privileges
          immediately after sending the signal.

    scour(1):
        * Documented in man(1) page:
            * Missing options
            * Specification of hours and minutes in configuration-file
        * Corrected format of "old" specification in
            * Configuration-file
            * scour(1) internal comments
